Test background color

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="sanfm">
     <title>Mi página de prueba</title>
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
 
 
