--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="sanfm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi página de prueba</title>
-    <link href="style/style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
 
 
