update style ref

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="sanfm">
+    <meta name="sanfm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi página de prueba</title>
+    <link rel="icon" type="image/x-icon" href="/themes/images/sanfm-logo-black.ico">
     <link href="/themes/css/article_style.css" rel="stylesheet" type="text/css">
   </head>
 
