--- a/pages/work-enironment-so/index.html
+++ b/pages/work-enironment-so/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="sanfm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi página de prueba</title>
+    <title>Making Lubuntu WM a little better</title>
     <link rel="icon" type="image/x-icon" href="/themes/images/sanfm-logo-black.ico">
     <link href="/themes/css/article_style.css" rel="stylesheet" type="text/css">
   </head>
@@ -17,7 +17,7 @@
   <body>
 
     <header class="articulo">
-        <h1>Test</h1>
+        <h1>Making Lubuntu WM a little better</h1>
         <a href="/" class="home-link">Home</a>
         <a href="/">
             <img class="sanfmlogo" src="/themes/images/sanfm-logo.png">
@@ -40,16 +40,23 @@
 
 
         <article class="content">
+	    <p>01/12/2024</p>
+
+
             <h2 id="intro">Intro</h2>
             <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
+                Objetivo: Conseguir que el desktop environmet de Lubuntu (LXQT / OpenBox) cumpla ciertas funcionalidades quasi de un tiling window manager (WM).
+		Lubuntu utiliza como desktop environment LXQT y este a su vez utiliza OpenBox como window manager. No obstante, OpenBox es un floating WM (de esos a los que estamos acostumbrados donde puedes arrastrar las ventanas y redimensionarlas con el ratón colocándolas donde te apetezca), en lugar de un tiling WM (los cuales reubican las ventanas para aprovechar el espacio de la pantalla al máximo y se operan con el teclado en lugar de con el ratón).
+		Si OpenBox es el WM que utiliza Lubuntu bastará con cambiar la configuración de OpenBox ¿verdad?
+		Pues a grandes rasgos sí, pero habrá que tener en cuenta un par de consideraciones si queremos utilizar algunos atajos de teclado, puesto que Lubuntu y LXQT utilizan unos shortcuts que podrían interferir con nuestra configuración de teclas.
             </p>
 
             <hr>
 
-            <h2 id="apartado1">Apartado 1</h2>
+            <h2 id="apartado1">Configuración de OpenBox</h2>
             <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
+                Vamos a añadir los atajos de teclado que queremos que nuestro WM (OpenBox) utilice. Para ello tendremos que abrir y editar el archivo de configuración de openbox
+                $HOME/.config/openbox/rc.xml
             </p>
             <h2 id="apartado2">Apartado 2</h2>
             <p>
