--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@
                 Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
             </p>
 
+	    <p>code example</p>
+
+	    <pre>
+	    	<code>
+function greet() {
+	console.log('Hola, mundo!');
+}
+greet();
+		</code>
+	   </pre>
+
+	   <p>Esto es un ejemplo de código inline: <code>const x = 42;</code></p>
+
+
             <hr>
 
             <h2 id="apartado1">Apartado 1</h2>
