--- a/posts_drafts/index.html
+++ b/posts_drafts/index.html
@@ -3,10 +3,11 @@
 
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="sanfm">
+    <meta name="sanfm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi página de prueba</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/x-icon" href="/themes/images/sanfm-logo-black.ico">
+    <link href="/themes/css/article_style.css" rel="stylesheet" type="text/css">
   </head>
 
 
@@ -16,12 +17,12 @@
   <body>
 
     <header class="articulo">
-        <h1>Post draft Test</h1>
-        <a href="#" class="home-link">Home</a>
-        <a href="#">
-            <img class="sanfmlogo" src="images/sanfm-logo.png">
+        <h1>Test</h1>
+        <a href="/" class="home-link">Home</a>
+        <a href="/">
+            <img class="sanfmlogo" src="/themes/images/sanfm-logo.png">
         </a>
-        <img class="imgHeader" src="images/under-construction.jpg">
+        <img class="imgHeader" src="/themes/images/under-construction.jpg">
     </header>
 
     <br>
@@ -43,6 +44,20 @@
             <p>
                 Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
             </p>
+
+	    <p>code example</p>
+
+	    <pre>
+	    	<code>
+function greet() {
+	console.log('Hola, mundo!');
+}
+greet();
+		</code>
+	   </pre>
+
+	   <p>Esto es un ejemplo de código inline: <code>const x = 42;</code></p>
+
 
             <hr>
 
@@ -79,7 +94,7 @@
 
 
         <div class="rightbar">
-            <img class="sanfmlogo" src="images/sanfm-logo-black.png">
+            <img class="sanfmlogo" src="/themes/images/sanfm-logo-black.png">
         </div>
 
 
@@ -93,11 +108,10 @@
             © sanfm
         </span>
         <a href="https://github.com/sanfm?tab=repositories">
-            <img class="logos" src="images/GitHub-Mark-64px.png">
+            <img class="logos" src="/themes/images/GitHub-Mark-64px.png">
         </a>
     </footer>
     
   </body>
 
 </html>
-
