test update article

--- a/pages/work-enironment-so/index.html
+++ b/pages/work-enironment-so/index.html
@@ -73,22 +73,22 @@
 
 			<pre>
 				<code>
-<!-- Keybindings for desktop switching -->
-<keybind key="W-1">
-  <action name="GoToDesktop">
-	<to>1</to>
-  </action>
-</keybind>
-<keybind key="W-2">
-  <action name="GoToDesktop">
-	<to>2</to>
-  </action>
-</keybind>
-<keybind key="W-3">
-  <action name="GoToDesktop">
-	<to>3</to>
-  </action>
-</keybind>
+&lt;!-- Keybindings for desktop switching --&gt;
+&lt;keybind key="W-1"&gt;
+  &lt;action name="GoToDesktop"&gt;
+    &lt;to&gt;1&lt;/to&gt;
+  &lt;/action&gt;
+&lt;/keybind&gt;
+&lt;keybind key="W-2"&gt;
+  &lt;action name="GoToDesktop"&gt;
+    &lt;to&gt;2&lt;/to&gt;
+  &lt;/action&gt;
+&lt;/keybind&gt;
+&lt;keybind key="W-3"&gt;
+  &lt;action name="GoToDesktop"&gt;
+    &lt;to&gt;3&lt;/to&gt;
+  &lt;/action&gt;
+&lt;/keybind&gt;
 				</code>
 			</pre>
 
