--- a/pages/work-enironment-so/index.html
+++ b/pages/work-enironment-so/index.html
@@ -32,6 +32,9 @@
             <ul>
                 <li><a href="#intro">Introducción</a></li>
                 <li><a href="#apartado1">Apartado 1</a></li>
+					<li><a href="#1.1 Escritorios virtuales">1.1 Escritorios virtuales</a></li>
+					<li><a href="#1.2 Tiling like">1.2 Tiling like</a></li>
+					<li><a href="#1.3 Apps habituales">1.3 Apps habituales</a></li>
                 <li><a href="#apartado2">Apartado 2</a></li>
                 <li><a href="#apartado3">Apartado 3</a></li>
             </ul>    
