--- a/pages/work-enironment-so/index.html
+++ b/pages/work-enironment-so/index.html
@@ -74,7 +74,7 @@
 				Estos cambios los haremos dentro de la sección <code>&lt;keyboard&gt;&lt;/keyboard&gt;</code>
             </p>
             
-            <h3 id="1.1 Escritorios virtuales">Escritorios virtuales</h3>
+            <h3 id="1.1 Escritorios virtuales">1.1 Escritorios virtuales</h3>
             
 				<p>
 					Usar tecla "Super" (también conocida como la tecla Windows) + "Número" para cambiar de escritorio virtual
@@ -127,7 +127,7 @@
 				</pre>
 			
 			
-			<h3 id="1.2 Tiling like">Tilink like</h3>
+			<h3 id="1.2 Tiling like">1.2 Tilink like</h3>
 			
 				<p>
 					Usar tecla "Control" + "Super" + "V" para dividir verticalmente la pantalla con las 2 últimas ventanas más recientes
@@ -341,7 +341,7 @@
 				</pre>
 
 
-			<h3 id="1.3 Apps habituales">Apps habituales</h3>
+			<h3 id="1.3 Apps habituales">1.3 Apps habituales</h3>
 
 				<p>
 					Algunos keybindings para aplicaciones recurrentes
