Added Codium extensions article and rearrange Lubuntu WM article

--- a/pages/work-enironment/SO/Lubuntu/index.html
+++ b/pages/work-enironment/SO/Lubuntu/index.html
@@ -31,12 +31,11 @@
         <div class="menu">
             <ul>
                 <li><a href="#intro">Introducción</a></li>
-                <li><a href="#apartado1">Apartado 1</a></li>
+                <li><a href="#1 OpenBox Config">OpenBox Config</a></li>
 					<li><a href="#1.1 Escritorios virtuales">1.1 Escritorios virtuales</a></li>
 					<li><a href="#1.2 Tiling like">1.2 Tiling like</a></li>
-					<li><a href="#1.3 Apps habituales">1.3 Apps habituales</a></li>
-                <li><a href="#apartado2">Apartado 2</a></li>
-                <li><a href="#apartado3">Apartado 3</a></li>
+					<li><a href="#1.3 Movimiento de ventanas">1.3 Movimiento de ventanas</a></li>
+					<li><a href="#1.4 Apps habituales">1.4 Apps habituales</a></li>
             </ul>    
         </div>
 
@@ -65,7 +64,7 @@
 
             <hr>
 
-            <h2 id="apartado1">Configuración de OpenBox</h2>
+            <h2 id="1 OpenBox Config">Configuración de OpenBox</h2>
             <p>
 				Vamos a añadir los atajos de teclado que queremos que nuestro WM (OpenBox) utilice. Para ello tendremos que abrir y editar el archivo de configuración de openbox <code>$HOME/.config/openbox/rc.xml</code>
             </p>
@@ -486,29 +485,9 @@
 
 
 
-            <h2 id="apartado2">Apartado 2</h2>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <h2 id="apartado3">Apartado 3</h2>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
-            <p>
-                Integer sagittis ultrices ligula, in pellentesque augue semper in. Pellentesque vestibulum ultricies lacinia. Ut quis odio nec tortor condimentum tincidunt. Morbi maximus, nisl quis luctus gravida, mauris nulla volutpat justo, vitae tristique tellus orci id eros. Suspendisse arcu sem, convallis quis semper et, semper sit amet turpis. Sed id sodales augue, sed consequat nulla. Cras gravida, purus ut efficitur faucibus, quam nunc consectetur elit, vitae eleifend leo odio sed leo. Ut et neque sit amet est lobortis aliquet.
-            </p>
+
+
+
         </article>
 
         
